# Quake1

./: .clang-format  CMakeLists.txt  Fitzquake.dsp  Fitzquake.dsw  anorm_dots.h  anorms.c  anorms.h  api.c  api.h  asm_i386.h  bspfile.h  cd_win.c  cdaudio.c  cdaudio.h  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  client.h  cmd.c  cmd.h  common.c  common.h  conproc.c  conproc.h  console.c  console.h  crc.c  crc.h  cvar.c  cvar.h  d_ifacea.h  draw.h  gl_draw.c  gl_fog.c  gl_mesh.c  gl_model.c  gl_model.h  gl_rlight.c  (+85 more)
common/: CMakeLists.txt  common.c  common.h
progs/: CMakeLists.txt  pr_exec.c  progs.h
server/: CMakeLists.txt  server.h
snd_null/: CMakeLists.txt  cd_null.c  snd_null.c
snd_sdl/: CMakeLists.txt  cd_sdl.c  snd_dma.c  snd_mix.c  snd_sdl.c  snd_sdl.cpp
snd_win32/: CMakeLists.txt  cd_win.c  snd_dma.c  snd_mem.c  snd_mix.c  snd_win.c
source/: CMakeLists.txt  api.c  api.h  bspfile.h  cdaudio.c  cdaudio.h  cl_demo.c  cl_input.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  conproc.c  console.c  console.h  cvar.h  gl_draw.c  gl_fog.c  gl_mesh.c  gl_model.c  gl_model.h  gl_refrag.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_screen.c  gl_sky.c  gl_test.c  gl_texmgr.c  gl_texmgr.h  gl_vid_sdl.c  glquake.h  host.c  host_cmd.c  image.c  image.h  in_win.c  keys.c  keys.h  (+29 more)
source/common/: common.c  common.h  crc.c  crc.h
source/in_sdl/: CMakeLists.txt  in_sdl.c
source/in_win32/: CMakeLists.txt  in_win.c
source/net/: CMakeLists.txt  net.h  net_dgrm.c  net_loop.c  net_main.c  net_null.c  net_ser.h  net_win.c  net_wins.c  net_wins.h  net_wipx.c
source/progs/: pr_cmds.c  pr_comp.h  pr_edict.c  pr_exec.c  progs.h
source/server/: server.h  server_int.h  sv_main.c  sv_move.c  sv_phys.c  sv_user.c
source/snd_null/: cd_null.c  snd_null.c
source/snd_sdl/: cd_sdl.c  snd_dma.c  snd_mem.c  snd_mix.c  snd_sdl.c  snd_sdl.h
source/snd_win32/: CMakeLists.txt  snd_mix.c
